[gd_scene load_steps=39 format=3 uid="uid://b5b0irp7yv1fh"]

[ext_resource type="Script" uid="uid://dofb4pu080c7i" path="res://scenes/enemies/boss_mener/boss.gd" id="1_x2d83"]
[ext_resource type="Texture2D" uid="uid://drv84wxu5yyvy" path="res://images/shadow.png" id="2_nm1aq"]
[ext_resource type="Texture2D" uid="uid://ch5axhisdpt4q" path="res://images/particles/footsteps.png" id="3_dnc8m"]
[ext_resource type="Texture2D" uid="uid://cxwdqha2x1g4c" path="res://images/enemies/cultivator/idle_1.png" id="4_tmjwt"]
[ext_resource type="Texture2D" uid="uid://coifk3xlvbpmk" path="res://images/enemies/cultivator/idle_2.png" id="5_vblie"]
[ext_resource type="Texture2D" uid="uid://mnvkwt528epy" path="res://images/enemies/boss_phantom_guy/idle_1.png" id="6_nm1aq"]
[ext_resource type="Texture2D" uid="uid://bfsgy3qtrxdrk" path="res://images/enemies/boss_phantom_guy/idle_2.png" id="7_dnc8m"]
[ext_resource type="Texture2D" uid="uid://biviwtdtiiavr" path="res://images/enemies/cultivator/throw_1.png" id="8_k06vj"]
[ext_resource type="Texture2D" uid="uid://8201ftuaw68q" path="res://images/enemies/cultivator/throw_2.png" id="9_lphrd"]
[ext_resource type="Texture2D" uid="uid://cpe0fkpomu8hf" path="res://images/player/weapon_idle_1.png" id="10_glkhe"]
[ext_resource type="Texture2D" uid="uid://bps6sleyuegis" path="res://images/player/weapon_idle_2.png" id="11_jsfib"]
[ext_resource type="Texture2D" uid="uid://bcwuq2wq0w2tg" path="res://images/player/weapon_run_1.png" id="12_0na05"]
[ext_resource type="Texture2D" uid="uid://5xnn3s6nc6oe" path="res://images/player/weapon_run_2.png" id="13_u5odl"]
[ext_resource type="AnimationLibrary" uid="uid://bikgb8shmiaxt" path="res://scenes/enemies/boss_mener/character_anim.res" id="14_x2d83"]
[ext_resource type="Texture2D" uid="uid://dxn0mbadq4t8a" path="res://images/enemies/alert.png" id="15_rumo6"]
[ext_resource type="Texture2D" uid="uid://8l2jjqfjsnxg" path="res://images/enemies/death.png" id="16_g2l2e"]
[ext_resource type="AudioStream" uid="uid://bq2e8q3gfupqo" path="res://sounds/enemies/alert.wav" id="19_4g3al"]
[ext_resource type="AudioStream" uid="uid://cignnr3g3u44l" path="res://sounds/hurt.wav" id="21_xet38"]
[ext_resource type="Texture2D" uid="uid://bsbhnvushm1wa" path="res://images/particles/hit.png" id="22_751bd"]
[ext_resource type="AudioStream" uid="uid://dn4he5d8kt427" path="res://sounds/death.wav" id="23_1l5dv"]

[sub_resource type="Curve" id="Curve_behe2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_irwyp"]
curve = SubResource("Curve_behe2")

[sub_resource type="Gradient" id="Gradient_epd02"]
interpolation_mode = 2
colors = PackedColorArray(0.43134, 0.43134, 0.43134, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_k5rp0"]
gradient = SubResource("Gradient_epd02")

[sub_resource type="Curve" id="Curve_xfiav"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.626667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_piq4r"]
curve = SubResource("Curve_xfiav")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uhvml"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(20, 1, 1)
angular_velocity_min = -100.0
angular_velocity_max = 100.0
radial_velocity_min = -40.0
radial_velocity_max = 40.0
gravity = Vector3(0, 98, 0)
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_piq4r")
color_ramp = SubResource("GradientTexture1D_k5rp0")
anim_speed_curve = SubResource("CurveTexture_irwyp")

[sub_resource type="SpriteFrames" id="SpriteFrames_tsdx8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_tmjwt")
}, {
"duration": 1.0,
"texture": ExtResource("5_vblie")
}],
"loop": true,
"name": &"alert",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_nm1aq")
}, {
"duration": 1.0,
"texture": ExtResource("7_dnc8m")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_nm1aq")
}, {
"duration": 1.0,
"texture": ExtResource("7_dnc8m")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_k06vj")
}, {
"duration": 1.0,
"texture": ExtResource("9_lphrd")
}, {
"duration": 1.0,
"texture": ExtResource("8_k06vj")
}],
"loop": true,
"name": &"throw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_glkhe")
}, {
"duration": 1.0,
"texture": ExtResource("11_jsfib")
}],
"loop": true,
"name": &"weapon_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_0na05")
}, {
"duration": 1.0,
"texture": ExtResource("13_u5odl")
}],
"loop": true,
"name": &"weapon_run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vkvym"]
radius = 68.0
height = 266.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ppb7l"]
random_pitch = 1.4
streams_count = 1
stream_0/stream = ExtResource("21_xet38")

[sub_resource type="Gradient" id="Gradient_6kd5u"]
colors = PackedColorArray(0.800491, 0.800491, 0.800491, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_edfdo"]
gradient = SubResource("Gradient_6kd5u")

[sub_resource type="Curve" id="Curve_pmtpy"]
_limits = [0.0, 4.0, 0.0, 1.0]
_data = [Vector2(0, 1.14286), 0.0, 1.4, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_q2178"]
curve = SubResource("Curve_pmtpy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a4dvo"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 200.0
initial_velocity_max = 250.0
gravity = Vector3(0, 400, 0)
radial_accel_min = -40.0
radial_accel_max = 40.0
scale_curve = SubResource("CurveTexture_q2178")
color_initial_ramp = SubResource("GradientTexture1D_edfdo")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_r5rfb"]
random_pitch = 1.4
streams_count = 1
stream_0/stream = ExtResource("23_1l5dv")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ojqbo"]
radius = 24.0
height = 120.0

[sub_resource type="Curve2D" id="Curve2D_vtbkp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1150, 0)
}
point_count = 2

[node name="Boss" type="CharacterBody2D"]
modulate = Color(0.8, 0.8, 0.8, 1)
collision_layer = 4
collision_mask = 20
motion_mode = 1
script = ExtResource("1_x2d83")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.246)
position = Vector2(-4.9999995, -5)
scale = Vector2(3.015625, 2.5416667)
texture = ExtResource("2_nm1aq")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
texture = ExtResource("3_dnc8m")
lifetime = 0.4
one_shot = true
explosiveness = 0.6
process_material = SubResource("ParticleProcessMaterial_uhvml")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
texture = ExtResource("3_dnc8m")
lifetime = 0.4
one_shot = true
explosiveness = 0.6
process_material = SubResource("ParticleProcessMaterial_uhvml")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-13, -142)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_tsdx8")
animation = &"run"
speed_scale = 0.4

[node name="RunAnim" type="AnimationPlayer" parent="AnimatedSprite2D"]
unique_name_in_owner = true
libraries = {
&"": ExtResource("14_x2d83")
}
autoplay = "idle"
speed_scale = 2.0

[node name="SightCast" type="RayCast2D" parent="AnimatedSprite2D"]
unique_name_in_owner = true
position = Vector2(-10, -14)
scale = Vector2(1, -1)
target_position = Vector2(-500, 0)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="Alert" type="Sprite2D" parent="AnimatedSprite2D"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2(-0.697247, -7.96956)
scale = Vector2(0.3, 0.3)
texture = ExtResource("15_rumo6")

[node name="Death" type="Sprite2D" parent="AnimatedSprite2D"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("16_g2l2e")

[node name="FootstepSFX" type="AudioStreamPlayer2D" parent="."]
volume_db = 5.0

[node name="XCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="YCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, -56)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -74)
shape = SubResource("CapsuleShape2D_vkvym")

[node name="AlertSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_4g3al")

[node name="HurtSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ppb7l")

[node name="HurtParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -24)
emitting = false
amount = 15
texture = ExtResource("22_751bd")
lifetime = 0.4
one_shot = true
explosiveness = 0.6
process_material = SubResource("ParticleProcessMaterial_a4dvo")

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_r5rfb")
volume_db = -5.0
pitch_scale = 0.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, -24)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ojqbo")

[node name="MinionCasts" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="RayCast2D" type="RayCast2D" parent="MinionCasts"]
position = Vector2(200, 0)
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D2" type="RayCast2D" parent="MinionCasts"]
position = Vector2(-200, 0)
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D3" type="RayCast2D" parent="MinionCasts"]
position = Vector2(-100, 100)
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D4" type="RayCast2D" parent="MinionCasts"]
position = Vector2(-100, -100)
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D5" type="RayCast2D" parent="MinionCasts"]
position = Vector2(100, 100)
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D6" type="RayCast2D" parent="MinionCasts"]
position = Vector2(100, -100)
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-97, -268)
rect = Rect2(-19, 1, 212, 289)

[node name="DashPath" type="Path2D" parent="."]
unique_name_in_owner = true
top_level = true
curve = SubResource("Curve2D_vtbkp")

[node name="DashingGuy" type="PathFollow2D" parent="DashPath"]
rotates = false

[node name="Sprite2D" type="Sprite2D" parent="DashPath/DashingGuy"]
position = Vector2(-8, -144)
texture = ExtResource("6_nm1aq")
flip_h = true

[node name="DashLine" type="Line2D" parent="."]
unique_name_in_owner = true
top_level = true
points = PackedVector2Array(144, -54, 291, -77)
default_color = Color(1, 0, 0, 1)

[connection signal="damaged" from="." to="." method="_on_damaged"]
[connection signal="damaged" from="." to="HurtSFX" method="play" unbinds=2]
[connection signal="damaged" from="." to="HurtParticles" method="restart" unbinds=2]
[connection signal="death" from="." to="." method="_on_death"]
[connection signal="death" from="." to="DeathSFX" method="play" unbinds=1]
[connection signal="animation_finished" from="AnimatedSprite2D/RunAnim" to="." method="_on_run_anim_animation_finished"]
[connection signal="current_animation_changed" from="AnimatedSprite2D/RunAnim" to="." method="_on_run_anim_current_animation_changed"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
